--- a/TPC6/app/templates/filme.html
+++ b/TPC6/app/templates/filme.html
@@ -87,7 +87,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Roteiristas</th>
+                        <th>Argumentistas</th>
                         <td>
                             <ul>
                                 {% for screenwriter in film_data.screenwriters %}
